--- a/Ml_zoomcamp/credit_scoring/credit_scoring.ipynb
+++ b/Ml_zoomcamp/credit_scoring/credit_scoring.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d04e7bea",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8ed7436d",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "49807b73",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "28b3fadb",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e7457322",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "ce035396",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ab86b3ef",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "f1d8917e",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "4     107       0     0     310    910  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "40962339",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "max    99999999.0  5000.0  11140.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "476a7da9",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "16b9fb41",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
        "max    11140.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "4fd52ad9",
    "metadata": {},
    "outputs": [],
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "febb388b",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "6f924284",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "9b5c933a",
    "metadata": {},
    "outputs": [],
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "b6aa7a81",
    "metadata": {},
    "outputs": [],
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "f3e76730",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1033,7 @@
        "[2672 rows x 13 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "3af9c1c9",
    "metadata": {},
    "outputs": [],
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "1fd8b59f",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "5fe56815",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "47c8a000",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1559,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "4b4bda82",
    "metadata": {},
    "outputs": [],
@@ -1582,17 +1582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "c17a38f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6591297134968879"
+       "0.655814826475503"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "45972386",
    "metadata": {},
    "outputs": [
@@ -1614,7 +1614,7 @@
        "1.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "4d29de27",
    "metadata": {},
    "outputs": [
@@ -2043,7 +2043,7 @@
        "DecisionTreeClassifier(max_depth=2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "3c961387",
    "metadata": {},
    "outputs": [
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "1bfb617f",
    "metadata": {},
    "outputs": [
@@ -2088,16 +2088,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|--- records=no <= 0.50\n",
-      "|   |--- seniority <= 6.50\n",
-      "|   |   |--- class: 1\n",
-      "|   |--- seniority >  6.50\n",
-      "|   |   |--- class: 0\n",
-      "|--- records=no >  0.50\n",
+      "|--- records=yes <= 0.50\n",
       "|   |--- job=partime <= 0.50\n",
       "|   |   |--- class: 0\n",
       "|   |--- job=partime >  0.50\n",
       "|   |   |--- class: 1\n",
+      "|--- records=yes >  0.50\n",
+      "|   |--- seniority <= 6.50\n",
+      "|   |   |--- class: 1\n",
+      "|   |--- seniority >  6.50\n",
+      "|   |   |--- class: 0\n",
       "\n"
      ]
     }
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "2b337b88",
    "metadata": {},
    "outputs": [
@@ -2207,7 +2207,7 @@
        "7    3000  default"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2230,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "4e58696d",
    "metadata": {},
    "outputs": [
@@ -2316,7 +2316,7 @@
        "6    9000       ok"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "63ad2cc5",
    "metadata": {},
    "outputs": [],
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "9d786e42",
    "metadata": {},
    "outputs": [
@@ -2497,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "bdcf4ac4",
    "metadata": {},
    "outputs": [],
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "0c4b8afa",
    "metadata": {},
    "outputs": [
@@ -3394,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "d3f490e9",
    "metadata": {},
    "outputs": [
@@ -3489,7 +3489,7 @@
        "7    3000  2000  default"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3512,7 +3512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "4fb4a432",
    "metadata": {},
    "outputs": [
@@ -3607,7 +3607,7 @@
        "0    8000  3000  default"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3618,7 +3618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "id": "13044480",
    "metadata": {},
    "outputs": [],
@@ -3631,7 +3631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "6c29ca81",
    "metadata": {
     "scrolled": true
@@ -5056,6 +5056,33 @@
     "\n",
     "* selecting `max_depth`\n",
     "* selecting `min_samples_leaf`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "03a77336",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.60e+01, 1.00e+03, 1.00e+04, ..., 0.00e+00, 1.00e+01, 3.60e+01],\n",
+       "       [3.20e+01, 1.10e+03, 0.00e+00, ..., 1.00e+00, 6.00e+00, 4.80e+01],\n",
+       "       [4.00e+01, 1.32e+03, 0.00e+00, ..., 0.00e+00, 1.00e+00, 4.80e+01],\n",
+       "       ...,\n",
+       "       [1.90e+01, 4.00e+02, 0.00e+00, ..., 0.00e+00, 1.00e+00, 2.40e+01],\n",
+       "       [4.30e+01, 2.50e+03, 1.80e+04, ..., 0.00e+00, 1.50e+01, 4.80e+01],\n",
+       "       [2.70e+01, 4.50e+02, 5.00e+03, ..., 1.00e+00, 1.20e+01, 4.80e+01]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
    ]
   },
   {
@@ -7045,7 +7072,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "proyecto_machin_learning",
    "language": "python",
    "name": "python3"
   },
