--- a/Ml_zoomcamp/cars_price_prediction/02-carprice.ipynb
+++ b/Ml_zoomcamp/cars_price_prediction/02-carprice.ipynb
@@ -1528,6 +1528,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -1554,7 +1561,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rmse_cv(model):\n",
+    "    rmse = np.sqrt(-cross_val_score(model, X, y, scoring=\"neg_mean_squared_error\", cv=5)).mean()\n",
+    "    return rmse\n",
+    "    \n",
+    "\n",
+    "def evaluation(y, predictions):\n",
+    "    mae = mean_absolute_error(y, predictions)\n",
+    "    mse = mean_squared_error(y, predictions)\n",
+    "    rmse = np.sqrt(mean_squared_error(y, predictions))\n",
+    "    r_squared = r2_score(y, predictions)\n",
+    "    return mae, mse, rmse, r_squared"
+   ]
   },
   {
    "cell_type": "code",
