--- a/Analisis/analisis_basico/0.1_kjst_manipulation_dataframes.ipynb
+++ b/Analisis/analisis_basico/0.1_kjst_manipulation_dataframes.ipynb
@@ -794,7 +794,7 @@
        "float64    13\n",
        "object     12\n",
        "int64       3\n",
-       "dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -950,7 +950,7 @@
       "text/plain": [
        "float64    13\n",
        "int64       3\n",
-       "dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 8,
@@ -974,7 +974,7 @@
      "data": {
       "text/plain": [
        "object    12\n",
-       "dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 9,
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "b03fa6a6",
    "metadata": {},
    "outputs": [
@@ -1641,7 +1641,7 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "22d3f60d",
    "metadata": {},
    "outputs": [
@@ -1974,7 +1974,7 @@
        "[8 rows x 28 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "eb0f7ba2",
    "metadata": {},
    "outputs": [
@@ -2425,7 +2425,7 @@
        "[12 rows x 28 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2447,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "ffe65525",
    "metadata": {},
    "outputs": [
@@ -2607,7 +2607,7 @@
        "[3 rows x 28 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2640,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "0220126e",
    "metadata": {},
    "outputs": [
@@ -2709,7 +2709,7 @@
        "5                   530.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2730,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "409f005b",
    "metadata": {},
    "outputs": [
@@ -2799,7 +2799,7 @@
        "5                   530.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2831,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "1170d123",
    "metadata": {},
    "outputs": [
@@ -2857,7 +2857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "58a2fa7c",
    "metadata": {},
    "outputs": [
@@ -3003,7 +3003,7 @@
        "5  English  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3028,7 +3028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "9a83076b",
    "metadata": {},
    "outputs": [
@@ -3428,7 +3428,7 @@
        "[4916 rows x 28 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3440,7 +3440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "f949b593",
    "metadata": {},
    "outputs": [
@@ -3840,7 +3840,7 @@
        "[4916 rows x 28 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3852,7 +3852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "9dd38bee",
    "metadata": {},
    "outputs": [],
@@ -3863,7 +3863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "040a334c",
    "metadata": {},
    "outputs": [
@@ -4263,7 +4263,7 @@
        "[4916 rows x 28 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4274,7 +4274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "2db300ec",
    "metadata": {},
    "outputs": [
@@ -4674,7 +4674,7 @@
        "[4916 rows x 28 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4689,7 +4689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "2f5045e8",
    "metadata": {},
    "outputs": [
@@ -5089,7 +5089,7 @@
        "[4916 rows x 27 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5104,7 +5104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "df4f60a4",
    "metadata": {},
    "outputs": [
@@ -5504,7 +5504,7 @@
        "[4916 rows x 27 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5517,7 +5517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "1a29b7e4",
    "metadata": {},
    "outputs": [
@@ -6037,7 +6037,7 @@
        "[15 rows x 28 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6051,7 +6051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "4f57277e",
    "metadata": {},
    "outputs": [
@@ -6571,7 +6571,7 @@
        "[15 rows x 28 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6595,7 +6595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "c2f2c5e3",
    "metadata": {},
    "outputs": [
@@ -6995,7 +6995,7 @@
        "[4916 rows x 29 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7017,7 +7017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "1a3ae2ba",
    "metadata": {},
    "outputs": [
@@ -7417,7 +7417,7 @@
        "[4917 rows x 29 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7450,7 +7450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "45867edc",
    "metadata": {},
    "outputs": [
@@ -7473,7 +7473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "ce3d32f5",
    "metadata": {},
    "outputs": [
@@ -7526,7 +7526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "8450948a",
    "metadata": {},
    "outputs": [
@@ -7926,7 +7926,7 @@
        "[4917 rows x 24 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7939,17 +7939,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "49395285",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3710, 24)"
+       "(3709, 24)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7962,7 +7962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "65b90663",
    "metadata": {},
    "outputs": [
@@ -8277,7 +8277,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3710 rows × 24 columns</p>\n",
+       "<p>3709 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -8359,10 +8359,10 @@
        "4915        6.6             456      84122.0  \n",
        "4916        7.8           13402  100000000.0  \n",
        "\n",
-       "[3710 rows x 24 columns]"
+       "[3709 rows x 24 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8378,11 +8378,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9851dc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e450efb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "proyecto_machin_learning",
    "language": "python",
    "name": "python3"
   },
@@ -8396,7 +8412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
