ADD : se agrego seccion de feature engineering mutual correlation

--- a/Ml_zoomcamp/Telco_Customer_Churn/churn_prediction.ipynb
+++ b/Ml_zoomcamp/Telco_Customer_Churn/churn_prediction.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "54dc03d8",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "53446d93",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "8b8e305e",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "churn                                    no               yes  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "58380853",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "0ccee32e",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "47f9c910",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "fd3c64a9",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "Name: churn, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "0c9ab6c5",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "aace0347",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "b0c30845",
    "metadata": {},
    "outputs": [],
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "c71b4110",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
        "(4225, 1409, 1409)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,8 +679,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93488d7a-2b0e-4560-a6e2-39694f7cf57c",
+   "metadata": {},
+   "source": [
+    "hacemos un reset para que no haya ningun problema con el modelo "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "e472d4c2",
    "metadata": {},
    "outputs": [],
@@ -692,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "9142a373",
    "metadata": {},
    "outputs": [],
@@ -719,8 +727,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "914893c7-c459-45e7-8ee9-0a9fc7b1bfe2",
+   "metadata": {},
+   "source": [
+    "for the eda we will use the full trainig dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "d4563059",
    "metadata": {},
    "outputs": [],
@@ -730,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "198e68a1",
    "metadata": {},
    "outputs": [
@@ -761,7 +777,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "07458f8f",
    "metadata": {},
    "outputs": [
@@ -785,7 +801,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,17 +812,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "aabccef5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.26996805111821087"
+       "np.float64(0.26996805111821087)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "97dea60c",
    "metadata": {},
    "outputs": [],
@@ -827,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "ca28b53b",
    "metadata": {},
    "outputs": [],
@@ -854,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "fd033247",
    "metadata": {},
    "outputs": [
@@ -880,7 +896,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "8b8a225b",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1142,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,17 +1153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "6d02d575",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.27682403433476394"
+       "np.float64(0.27682403433476394)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,17 +1175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "ccb58935",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2632135306553911"
+       "np.float64(0.2632135306553911)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,17 +1197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "377b9682",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.26996805111821087"
+       "np.float64(0.26996805111821087)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,17 +1227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "9c618bda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.006855983216553063"
+       "np.float64(-0.006855983216553063)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,17 +1248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "id": "b7b876a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.006754520462819769"
+       "np.float64(0.006754520462819769)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "id": "a4cb3303",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1282,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,17 +1293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "id": "e041cd8b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.20503330866025166"
+       "np.float64(0.20503330866025166)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,17 +1315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "235340cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.06493474245795922"
+       "np.float64(0.06493474245795922)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,17 +1336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "34c63e56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3298090040927694"
+       "np.float64(0.3298090040927694)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,17 +1358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "b04e61ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.05984095297455855"
+       "np.float64(-0.05984095297455855)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,22 +1392,28 @@
    "source": [
     "churn_group / global_churn >1 more likely to churn\n",
     "\n",
-    "churn_group / global_churn <1 less likely to churn"
+    "churn_group / global_churn <1 less likely to churn\n",
+    "\n",
+    "* el cociente \n",
+    "churn_group\n",
+    "/\n",
+    "global_churn\n",
+    "churn_group/global_churn compara el riesgo del grupo contra la línea base. Mayor que 1 ⇒ más riesgo; menor que 1 ⇒ menos riesgo; igual a 1 ⇒ igual riesgo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "id": "4e40ea27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2216593879412643"
+       "np.float64(1.2216593879412643)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,17 +1424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "id": "529be005",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7594724924338315"
+       "np.float64(0.7594724924338315)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "id": "f084e790",
    "metadata": {},
    "outputs": [],
@@ -1451,8 +1473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "164cb7fc",
+   "execution_count": 50,
+   "id": "697c1805-4244-4b6c-95c1-cd8584eaaf47",
    "metadata": {},
    "outputs": [
     {
@@ -2735,8 +2757,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f1db743-9fc0-437b-b736-a0a42ce558ad",
+   "metadata": {},
+   "source": [
+    "**Información mutua (MI)**: es un número que dice cuánto ayuda saber una cosa para adivinar mejor otra.\n",
+    "Si conocer A te permite acertar más sobre B, la MI es alta; si conocer A no ayuda, la MI es cero.\n",
+    "\n",
+    "Ejemplo simple: ver paraguas suele ayudar a saber si llueve ⇒ MI alta. Ver gorra quizá no dice nada ⇒ MI baja/cero.\n",
+    "\n",
+    "Aquí tiene una forma **no técnica** de leer el número que devuelve `mutual_info_score(X, Y)`:\n",
+    "\n",
+    "* La función devuelve un **número ≥ 0**.\n",
+    "* **≈ 0.00** → *No hay relación útil*: saber una variable **no ayuda** a adivinar la otra.\n",
+    "* **Un poco mayor que 0** (p. ej., 0.05–0.2) → *Relación muy débil*: apenas ayuda.\n",
+    "* **Intermedio** (p. ej., 0.2–0.7) → *Relación apreciable*: sí ayuda a predecir algo.\n",
+    "* **Alto** (p. ej., > 0.7, 1.0, 2.0, …) → *Relación fuerte*: conocer una variable **ayuda mucho** a adivinar la otra.\n",
+    "  *(El valor puede superar 1; no está acotado a 1).*\n",
+    "\n",
+    "Notas importantes para interpretarlo bien:\n",
+    "\n",
+    "* La escala **depende de los datos** (cómo estén discretizados y cuántas categorías haya). Por eso, es mejor **comparar MI entre varias variables** y quedarse con las que tienen valores más altos, en lugar de usar un “umbral universal”.\n",
+    "* Siempre es **simétrica**: `MI(X,Y) = MI(Y,X)`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "id": "e15337dd",
    "metadata": {},
    "outputs": [],
@@ -2746,17 +2793,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "id": "7ccbf4ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0983203874041556"
+       "np.float64(0.0983203874041556)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2767,17 +2814,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "id": "e08affe3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0001174846211139946"
+       "np.float64(0.0001174846211139946)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2788,17 +2835,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "id": "66692c98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0983203874041556"
+       "np.float64(0.0983203874041556)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,17 +2856,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "id": "9e7d1fdf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.009967689095399745"
+       "np.float64(0.009967689095399745)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "id": "7f486dfc",
    "metadata": {},
    "outputs": [],
@@ -2841,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "id": "58520578",
    "metadata": {},
    "outputs": [
@@ -2867,7 +2914,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2875,6 +2922,16 @@
    "source": [
     "mi = df_full_train[categorical].apply(mutual_info_churn_score)\n",
     "mi.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c1dda449-c972-47d7-ad3c-20ada20356a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### videoo 3.6 finalizado"
    ]
   },
   {
